# GenerativeStoryToolkit

./: .env_template  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: Graph Registry.md  Groups.md
examples/: general.ipynb
gstk/: config.py  shim.py
gstk/creation/: api.py  formatters.py  graph_registry.py  group.py
gstk/graph/: check.py  graph.py  project_locator.py  registry.py  registry_context_manager.py  system_graph_registry.py
gstk/graph/interface/graph/: graph.py  sqlite_graph.py
gstk/graph/interface/resource_locator/: local_file.py  resource_locator.py
gstk/llmlib/: async_openai.py  object_generation.py
gstk/models/: chatgpt.py
gstk/user_registries/story/: graph_registry.py
gstk/util/: log_config.py  misc.py  openai.py  threadlib.py
scratch/: label_creation.py
